unpackaged/main/default/objects/Terminal_Replacement__c/Terminal_Replacement__c.object-meta.xml
<CustomObject>
    <label>Terminal Replacement</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Terminal Replacement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terminal Replacements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>