unpackaged/main/default/objects/Terminal_Replacement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Terminal Replacements</relationshipLabel>
    <relationshipName>Terminal_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>