unpackaged/main/default/objects/Terminal_Replacement__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Terminal Replacements</relationshipLabel>
    <relationshipName>Terminal_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>