unpackaged/main/default/objects/Terminal_Replacement__c/fields/POS_Solution__c.field-meta.xml
<CustomField>
    <fullName>POS_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POS Solution</label>
    <referenceTo>POS_Solution__c</referenceTo>
    <relationshipLabel>Terminal Replacements</relationshipLabel>
    <relationshipName>Terminal_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>