unpackaged/main/default/objects/Terminal_Replacement__c/fields/Terminal_Replacement_TID__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Replacement_TID__c</fullName>
    <label>Terminal Replacement TID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>