unpackaged/main/default/objects/Terminal_Replacement__c/fields/Terminal_Returned__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminal Returned</label>
    <type>Checkbox</type>
</CustomField>