unpackaged/main/default/objects/Terminal_Replacement__c/fields/Terminal_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Returned_Date__c</fullName>
    <label>Terminal Returned Date</label>
    <type>Date</type>
</CustomField>