unpackaged/main/default/objects/Terminal_Replacement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Terminal_Replacement_TID__c</columns>
    <columns>Terminal_Returned__c</columns>
    <columns>Terminal_Returned_Date__c</columns>
    <columns>Case__c</columns>
    <columns>POS_Solution__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>