unpackaged/main/default/objects/Terminal_Replacement__c/listViews/Terminals_Returned.listView-meta.xml
<ListView>
    <fullName>Terminals_Returned</fullName>
    <columns>NAME</columns>
    <columns>Terminal_Replacement_TID__c</columns>
    <columns>Terminal_Returned__c</columns>
    <columns>Terminal_Returned_Date__c</columns>
    <columns>Case__c</columns>
    <columns>POS_Solution__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Terminal_Returned__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Terminals Returned</label>
</ListView>